Fix bug - modal behind trail img

--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -15,6 +15,8 @@
             align-items: center;
             justify-content: space-between;
             height: 50px;
+            position: relative; 
+            z-index: 2;
     
             > div {
                 font-size: 12px;
@@ -82,12 +84,12 @@
                 > #search-modal {
                     position: absolute;
                     z-index: 1;
-                    top: 37px;
+                    top: 38px;
+                    left: 2px;
                     max-height: 350px;
                     width: 300px;
                     background: white;
                     overflow-y: scroll;
-                    border: 1px solid rgb(220, 220, 220);
         
                     > a {
                         display: flex;
@@ -215,11 +217,19 @@
         > section {
             display: flex;
 
-            #trail-details {
+            > #trail-details {
                 flex-grow: 1;
+
+                > #details {
+                    display: flex;
+
+
+                    
+                }
+                
             }
 
-            #nearby-trails {
+             >#nearby-trails {
                 background: yellow;
             }
             
